--- a/2/styles.css
+++ b/2/styles.css
@@ -9,6 +9,7 @@ body{
   --fs-text: clamp(12px, 5vw, 16px);;
   --fs-xl: clamp(2rem, 2.5vw, 5rem);
   --padding: 1em;
+  --translate-value: 10px;
 
   font-family: Inter;
   background-color: var(--main);
@@ -21,8 +22,8 @@ body{
 }
 
 a{
-  color: inherit; /* blue colors for links too */
-  text-decoration: none; /* no underline */
+  color: inherit; 
+  text-decoration: none; 
 }
 
 .group{
@@ -31,23 +32,55 @@ a{
   text-transform: uppercase;
 }
 
-.group .contact-info{
+.contact-group{
+  background-color: transparent;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 5px;
+  position: relative;
+  isolation: isolate;
+  flex: 1.5;
+}
+
+.contact-group *{
+  transform: translateX(var(--translate-value));
+}
+
+.contact-group > * {
+  position: absolute;
+  top: 0;
+  left: 50%;
+}
+
+.contact-group::before{
+  z-index: -1;
+  background-color: var(--accent);
+  content: '';
+  position: absolute;
+  width: 115%;
+  height: 100%;
+  clip-path: polygon(12.5% 0, 100% 0%, 100% 100%, 0% 100%);
+}
+
+.contact-group .info{
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   font-weight: 700;
-  font-size: 14px;
+  font-size: 10px;
+  text-align: center;
+  gap: 5px;
+  top: 35%;
+  left: 0;
+}
+
+.contact-group .info h2{
+  font-size: 1em;
 }
 
 .group .tel{
   color: var(--highlight);
-  font-size: 26px;
-  /* font-size: var(--fs-text); */
-}
-
-.group.right{
-  justify-content: space-evenly;
-  align-items: center;
+  font-size: 1.5em;
 }
 
 header > *{
@@ -76,9 +109,10 @@ header > * > div{
 
 #phone-icon{
   display: none;
-  /* display: block; */
   height: 40px;
   width: 40px;
+  top: 30%;
+  left: 15%;
 }
 
 #phone-icon > svg{
@@ -86,8 +120,42 @@ header > * > div{
   fill: var(--highlight);
 }
 
-@media (min-width: 500px)  {
+@media (min-width: 425px)  {
+  .contact-group .info{
+    left: 10%;
+  }
+}
+
+@media (min-width: 550px)  {
   #phone-icon{
     display: block;
+    left: 7.5%;
+  }
+
+  .group .tel{
+    color: var(--highlight);
+    font-size: 1.8em;
+  }
+
+  .contact-group .info{
+    left: 25%;
+  }
+}
+
+@media (min-width: 750px)  {
+  .contact-group .info{
+    left: 20%;
+    top: 25%;
+    font-size: 14px;
+  }
+
+  .contact-group{
+    flex: 2;
+  }
+}
+
+@media (min-width: 1050px)  {
+  #phone-icon{
+    left: 12%;
   }
 }
