--- a/2/styles.css
+++ b/2/styles.css
@@ -1,13 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-
 body{
   --main: #FEFEFE;
   --secondary: #252525;
   --accent: #A4361D;
   --accent-2: #f5d22080;
   --highlight: #F5D020;
-  --fs-text: clamp(12px, 5vw, 16px);;
+  --fs-text: clamp(12px, 1.75vw, 16px);;
   --fs-xl: clamp(1.5rem, 3vw, 5rem);
   --padding: 1em;
   --translate-value: 10px;
@@ -147,15 +146,15 @@ header > * > div{
   transform: rotate(-45deg) translate(5px, -5px);
 }
 
-.middle{
+#mobile-middle{
   position: relative;
 }
 
-#menu{
+.menu{
   transform: translateY(0);
   position: absolute;
+  font-size: var(--fs-text);
   top: 50%;
-  transform: translateY(-50%);
   background-color: var(--accent-2);
   padding: 1rem;
   z-index: 2;
@@ -164,25 +163,36 @@ header > * > div{
   transition: var(--transition-value);
 }
 
-#menu-toggle[aria-expanded="true"] + #menu{
+#menu-toggle[aria-expanded="true"] + .menu{
   opacity: 1;
   visibility: visible;
   transform: translate(-25px, 75px);
 }
 
-#menu > ul{
+.menu > ul{
   width: 100%;
   display: flex;
   gap: 10px;
 }
 
-#menu > ul *{
+.menu > ul *{
   text-wrap: nowrap;
 }
 
-#menu > ul > *:hover{
+.menu > ul > *:hover{
   color: var(--accent);
   text-decoration: underline var(--highlight) 2px;
+}
+
+#desktop-menu{
+  display: none;
+ 
+  margin-right: 1rem;
+  justify-content: center;
+  align-items: center;
+  position: initial;
+  background-color: initial;
+  
 }
 
 #phone-icon{
@@ -222,6 +232,18 @@ header > * > div{
   }
 }
 
+@media (min-width: 650px)  {
+  #desktop-menu{
+    display: flex;
+    opacity: 1;
+    visibility: visible;
+  }
+
+  #mobile-middle{
+    display: none;
+  }
+}
+
 @media (min-width: 750px)  {
   .contact-group .info{
     left: 20%;
@@ -248,4 +270,5 @@ header > * > div{
     left: 15%;
   }
 }
+
 
