--- a/2/styles.css
+++ b/2/styles.css
@@ -6,7 +6,7 @@ body{
   --accent: #A4361D;
   --accent-2: #f5d22080;
   --highlight: #F5D020;
-  --fs-text: clamp(12px, 1.75vw, 22px);;
+  --fs-text: clamp(0.75rem, 1.75vw, 1rem);
   --fs-xl: clamp(1.2rem, 3vw, 5rem);
   --padding: 1em;
   --nav-height: 85px;
@@ -34,7 +34,7 @@ header{
 }
 
 header > .left, 
-header > #mobile-middle{
+header > .middle{
   flex: 1;
   display: flex;
   justify-content: center;
@@ -45,9 +45,83 @@ header > .contact{
   flex: 2;
 }
 
-.group{
+.left, 
+.contact{
   color: var(--main);
   text-transform: uppercase;
+}
+
+.logo{
+  background-color: var(--accent);
+  font-weight: 500;
+  font-size: var(--fs-xl);
+  padding: 0.5em 0.75em 0.5em 0.75em;
+}
+
+#menu-toggle{
+  height: 40px;
+  background-color: transparent;
+  width: 40px;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+#menu-toggle .line{
+  display: block;
+  content: '';
+  height: 5.5px;
+  width: 100%;
+  margin: 4px;
+  background-color: var(--accent);
+  transition: var(--transition-value);
+}
+
+#menu-toggle[aria-expanded="true"] .line:nth-child(1){
+  transform: rotate(45deg) translate(7.5px, 7.5px);
+}
+
+#menu-toggle[aria-expanded="true"] .line:nth-child(2){
+  opacity: 0;
+}
+
+#menu-toggle[aria-expanded="true"] .line:nth-child(3){
+  transform: rotate(-45deg) translate(5px, -5px);
+}
+
+.menu{
+  opacity: 0;
+  visibility: hidden;
+
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: var(--fs-text);
+  background-color: var(--accent-2);
+  padding: 1rem;
+  z-index: 2;
+  transition: var(--transition-value);
+}
+
+#menu-toggle[aria-expanded="true"] + .menu{
+  opacity: 1;
+  visibility: visible;
+  transform: translate(-50%, 175%);
+}
+
+.menu > ul{
+  width: 100%;
+  display: flex;
+  gap: 10px;
+}
+
+.menu > ul *{
+  text-wrap: nowrap;
+}
+
+.menu > ul > *:hover{
+  color: var(--accent);
+  text-decoration: underline var(--highlight) 2px;
 }
 
 .contact{
@@ -102,93 +176,6 @@ header > .contact{
   font-size: 1.5em;
 }
 
-.logo{
-  background-color: var(--accent);
-  font-weight: 500;
-  font-size: var(--fs-xl);
-  padding: 0.5em 0.75em 0.5em 0.75em;
-}
-
-#menu-toggle{
-  height: 40px;
-  background-color: transparent;
-  width: 40px;
-  border: none;
-  padding: 0;
-  margin-top: -0.5rem;
-  cursor: pointer;
-}
-
-#menu-toggle .line{
-  display: block;
-  content: '';
-  height: 5.5px;
-  width: 100%;
-  margin: 4px;
-  background-color: var(--accent);
-  transition: var(--transition-value);
-}
-
-#menu-toggle[aria-expanded="true"] .line:nth-child(1){
-  transform: rotate(45deg) translate(7.5px, 7.5px);
-}
-
-#menu-toggle[aria-expanded="true"] .line:nth-child(2){
-  opacity: 0;
-}
-
-#menu-toggle[aria-expanded="true"] .line:nth-child(3){
-  transform: rotate(-45deg) translate(5px, -5px);
-}
-
-#mobile-middle{
-  position: relative;
-}
-
-.menu{
-  transform: translateY(0);
-  position: absolute;
-  font-size: var(--fs-text);
-  top: 50%;
-  background-color: var(--accent-2);
-  padding: 1rem;
-  z-index: 2;
-  opacity: 0;
-  visibility: hidden;
-  transition: var(--transition-value);
-}
-
-#menu-toggle[aria-expanded="true"] + .menu{
-  opacity: 1;
-  visibility: visible;
-  transform: translate(-25px, 75px);
-}
-
-.menu > ul{
-  width: 100%;
-  display: flex;
-  gap: 10px;
-}
-
-.menu > ul *{
-  text-wrap: nowrap;
-}
-
-.menu > ul > *:hover{
-  color: var(--accent);
-  text-decoration: underline var(--highlight) 2px;
-}
-
-#desktop-menu{
-  display: none;
- 
-  margin-right: 2rem;
-  justify-content: center;
-  align-items: center;
-  position: initial;
-  background-color: initial;
-}
-
 #phone-icon{
   display: none;
   height: 40px;
@@ -201,6 +188,7 @@ header > .contact{
   height: 100%;
   fill: var(--highlight);
 }
+
 
 @media (min-width: 425px)  {
   .contact-group .info{
